{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "MainActionMap",
            "id": "98e3b4f4-3a04-45ca-b3cb-2a5c84f1dc2c",
            "actions": [
                {
                    "name": "Ascend",
                    "type": "Button",
                    "id": "1653ae71-a746-4b2a-a3a2-43ceadaf29a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FlySideways",
                    "type": "Value",
                    "id": "8e65cf41-5d7d-4605-b66a-c1c262dfbb76",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Descend",
                    "type": "Button",
                    "id": "3ee1725c-2205-440f-a541-8d06578973fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b8d9ea2d-9f0a-439b-ae7f-125e7cd9ae60",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ascend",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "AD",
                    "id": "a335915f-fb82-45a7-8b94-70ba54efefe4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlySideways",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ff5f4fb9-467e-41db-a76c-7521a61d0972",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlySideways",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e49e508f-0c82-4754-a257-3e414a0e4088",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlySideways",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0121e82b-0b78-4d07-b4af-e17eb8287399",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Descend",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}